--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friedrich Auto</title>
   </head>
-  <body>
+  <body class="body">
+    <div class="container"><h1 class="heading-h1">Hello World</h1></div>
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
