Work with html and images

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friedrich Auto</title>
-  </head>
+  <load src="./html/base/head.html" title="О нас" />
   <body class="body">
     <div class="container"><h1 class="heading-h1">Hello World</h1></div>
     <script type="module" src="/js/main.js"></script>
