Created header top

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <load src="./html/base/head.html" title="О нас" />
   <body class="body">
-    <div class="container"><h1 class="heading-h1">Hello World</h1></div>
+    <load src="./html/сomponents/header.html" />
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
