Created nav-menu for header

--- a/src/html/сomponents/header.html
+++ b/src/html/сomponents/header.html
@@ -123,5 +123,78 @@
         </button>
       </div>
     </div>
+    <!-- Navigation -->
+    <section class="nav nav__container">
+      <div class="nav__heading">
+        <div class="navigation__heading-title text-p-default">
+          <img src="../../assets/images/burger-menu.svg" alt="" />
+          <span>Навигация</span>
+        </div>
+        <img id="nav-close-btn" src="../../assets/images/close-btn.svg" alt="" />
+      </div>
+      <div class="nav__services">
+        <div class="nav__services-title text-p-default">
+          <img
+            class="nav__services-title-icon"
+            src="../../assets/images/key-icon.gif"
+            alt=""
+          />
+          <p class="text-p-default nav__services-title-text">
+            Все услуги автосервиса
+          </p>
+        </div>
+        <ul class="nav__services-list">
+          <li class="nav__services-item dropdown">
+            <a class="nav__services-link" href="#"
+              >Услуги
+              <img
+                class="nav__services-icon"
+                src="../../assets/images/dropdown-arrow.svg"
+                alt=""
+              />
+            </a>
+            <ul class="nav__dropdown-menu">
+              <div class="nav__dropdown-menu-container">
+                <li><a href="#">Диагностика</a></li>
+                <li><a href="#">Ремонт электрики</a></li>
+                <li><a href="#">Техобслуживание</a></li>
+                <li><a href="#">Ремонт подвески</a></li>
+                <li><a href="#">Ремонт двигателя</a></li>
+                <li><a href="#">Ремонт АКПП, МКПП</a></li>
+                <li><a href="#">Ремонт тормозной системы</a></li>
+                <li><a href="#">Ремонт рулевого управления</a></li>
+              </div>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <nav class="nav__wrapper">
+        <ul class="nav__list text-p-small">
+          <li class="nav__item">
+            <a class="nav__link" href="#about-us">О нас</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about-us">Полезные статьи</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about-us">Аренда мототехники</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about-us">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="nav__address">
+        <h4 class="nav__address-title text-p-default">Адрес</h4>
+        <p>
+          <strong>г. Санкт-Петербург,</strong><br />
+          Краснопутиловская ул., 46, корп. 7, стр. 3,
+        </p>
+        <a href="https://yandex.ru/maps/-/CHBifKm1" class="text-link">
+          построить маршрут
+        </a>
+      </div>
+    </section>
+    <!-- Navigation end -->
   </div>
 </header>
