Created hero section

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <load src="./html/base/head.html" title="О нас" />
   <body class="body">
-    <load src="./html/сomponents/header.html" />
+    <div class="hero__wrapper-img">
+      <load src="./html/сomponents/header.html" />
+      <load src="./html/сomponents/hero.html" />
+      <span class="hero__wrapper-img-effect"></span>
+    </div>
+
+    <main>
+      <load src="./html/сomponents/advantages.html" />
+    </main>
+
+    <load src="./html/сomponents/footer.html" />
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
