Created advantage section

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <main>
       <load src="./html/сomponents/advantages.html" />
+      <load src="./html/сomponents/about-us.html" />
     </main>
 
     <load src="./html/сomponents/footer.html" />
